Prepare for Vercel deployment
- Remove sensitive data files from git (xlsx, extracted_data.json, extract.py)
- Add vercel.json with build config
- Make standalone output conditional (Docker only)
- Add docker-compose.prod.yml
- Update .env.example with production variables
- Make seed.ts work without extracted_data.json

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,11 @@
 # Database
-DATABASE_URL="postgresql://postgres:postgres@localhost:5433/itflow?schema=public"
+DATABASE_URL="postgresql://itflow:CHANGE_ME@db:5432/itflow?schema=public"
 
-# NextAuth
-NEXTAUTH_SECRET="generate-a-secure-secret-here"
-NEXTAUTH_URL="http://localhost:3000"
+# Database password (used by docker-compose.prod.yml)
+DB_PASSWORD="CHANGE_ME"
+
+# NextAuth - generate with: openssl rand -base64 32
+NEXTAUTH_SECRET="CHANGE_ME"
+
+# NextAuth - your public URL (with https in production)
+NEXTAUTH_URL="https://your-domain.com"
