fix new it-flow

--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,14 @@ NEXTAUTH_SECRET="CHANGE_ME"
 
 # NextAuth - your public URL (with https in production)
 NEXTAUTH_URL="https://your-domain.com"
+
+# SMTP - Email settings for portal invitations and notifications
+SMTP_HOST="smtp.gmail.com"
+SMTP_PORT="587"
+SMTP_SECURE="false"
+SMTP_USER="your-email@gmail.com"
+SMTP_PASS="your-app-password"
+SMTP_FROM="ITFlow <noreply@your-domain.com>"
+
+# Inbound Email - Secret token for email-to-ticket webhook
+INBOUND_EMAIL_SECRET="CHANGE_ME"
