--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@prisma/client": "^7.4.0",
     "@tanstack/react-query": "^5.90.21",
     "@tanstack/react-query-devtools": "^5.91.3",
+    "@types/nodemailer": "^7.0.11",
     "@types/qrcode": "^1.5.6",
     "bcryptjs": "^3.0.3",
     "class-variance-authority": "^0.7.1",
@@ -33,6 +34,7 @@
     "next-auth": "^5.0.0-beta.30",
     "next-intl": "^4.8.2",
     "next-themes": "^0.4.6",
+    "nodemailer": "^7.0.13",
     "otpauth": "^9.5.0",
     "pg": "^8.18.0",
     "qrcode": "^1.5.4",
